[tool.poetry]
name = "cedskmeans"
version = "0.1.0"
description = "A Differentially Private K-Means Clustering algorithm."
authors = ["Nikhil Ravi <nr337@cornell.edu>", "Brent Vastola-Lunghino <brent@kevala.com>", "Anna Scaglione <as337@cornell.edu>", "Sean Peisert <sppeisert@lbl.gov>"]
license = "BSD-3-Clause-Modified"
packages = [{include = "cedskmeans", from = "src"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
scikit-learn = "^1.2.2"
numpy = "^1.24.2"
sympy = "^1.11.1"
pandas = "^2.0.1"
scipy = "^1.10.1"
joblib = "^1.2.0"
pyspark = "^3.4.0"
pytz = "^2023.3"
ray = {extras = ["tune"], version = "^2.5.1"}
tqdm = "^4.65.0"
tabulate = "^0.9.0"
fsspec = "^2023.6.0"
tensorboardx = "^2.6.1"
tensorboard = "^2.13.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
ipykernel = "^6.22.0"
matplotlib = "^3.7.1"
plotly = "^5.15.0"
nbformat = "^5.9.1"
hiplot = "^0.1.33"
isort = "^5.12.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.2"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-material = "^9.1.21"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

